[package]
name = "netaddr2"
version = "0.5.0"
license = "MIT OR Apache-2.0"
authors = ["Kristofer Rye <kristofer.rye@gmail.com>"]
edition = "2018"

description = "A Rust network address parsing and arithmetic library"
readme = "README.md"
repository = "https://github.com/rye/rust-netaddr2"
documentation = "https://docs.rs/netaddr2"
homepage = "https://rye.github.io/rust-netaddr2"

categories = ["data-structures", "network-programming"]
keywords = ["netaddr", "network", "address", "cidr"]

[features]
default = []

[dependencies]
serde = { version = "~1", optional = true }

[dev-dependencies]
serde_test = { version = "~1" }
